# treeship

./: .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  NOTICE  ONBOARDING.md  PLATFORM.md  PR_DESCRIPTION.md  README.md  RELEASE_NOTES_NEXT.md  SECURITY.md  TREESHIP.md  clippy.toml  hub-state-smoke.sh  rust-toolchain.toml
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  feature.yml  feature_request.md
.github/scripts/: npm-publish-if-needed.sh  publish-smoke.sh  wait-for-crates-version.sh  wait-for-npm-version.sh  wait-for-pypi-version.sh
.github/workflows/: ci.yml  release.yml
bridges/a2a/: README.md  package-lock.json  package.json
bridges/mcp/: ATTACHING.md  README.md  package-lock.json  package.json
design/: README.md  tokens.json
design/fonts/: README.md
docs/: .gitignore  feature-inventory.yml  getting-started.md  middleware.ts  next.config.mjs  package.json  privacy.md  self-hosting.md  source.config.ts  tsconfig.json  vercel.json
docs/app/: global.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
docs/architecture/: subcrate-versions.md
docs/components/: copy-install.tsx  llm-actions.tsx
docs/design/: receipt-report-next.md
docs/lib/: blog.ts  llms.ts
docs/public/: llms.txt
docs/quality/: ai-assisted-development.md
docs/release-adversarial/: README.md  v0.9.9.md
docs/scripts/: sync-agents-matrix.mjs  sync-changelog.mjs  sync-feature-matrix.mjs
docs/security/: TS-2026-001.md  threat-model.md
docs/specs/: agent-capability-cards.md  agent-invitations-rooms.md  agent-resolver.md  capability-provenance.md  commitments.md  cyberlogic-trust-model.md  local-dashboard.md  memory-provenance-binding.md  merkle-consistency.md  per-actor-signing.md  private-verification.md  protocol-integration.md  receipt-system.md  registry-topology.md  token-capture.md  transparency-log.md  trusted-rooms.md  vision.md  work-history.md  workflow-declarations.md  zk-verification.md
integrations/: CLAUDE.md  agents.json
protocol/: SPEC.md  attestation.schema.json  keys.json
schemas/: README.md  package-lock.json  package.json  treeship.boundary.v1.json  validate.mjs
scripts/: check-docs-routes.py  check-docs-snippets.sh  check-feature-inventory.py  check-hub-openapi.py  check-release-versions.py  check-sdk-docs.py  check-specs-index.py  gen-cli-reference.py  gen-design-tokens.py  release.sh  smoke-platform-release.sh  verify-receipt.py
skills/: README.md
tests/: acceptance-0.18.sh
(+331 files in other folders)
